2022-02-21  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Fix release build
        https://bugs.webkit.org/show_bug.cgi?id=237004

        Unreviewed.

        If you include WTF, you must have set NDEBUG in release builds.

        * Configurations/Base.xcconfig:

2022-02-21  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Fix iOS build
        https://bugs.webkit.org/show_bug.cgi?id=237000

        The lowPower selector doesn't exist on iOS.

        Unreviewed.

        * WebGPU/Instance.mm:
        (WebGPU::sortedDevices):
        (WebGPU::Instance::requestAdapter):

2022-02-21  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Tracer bullet part 12: Migrate from C function callbacks to blocks
        https://bugs.webkit.org/show_bug.cgi?id=236934

        Reviewed by Dean Jackson.

        For all the C function pointer / userdata pairs, simply create a parallel entry point which accepts a block instead.

        * WebGPU/Adapter.mm:
        (wgpuAdapterRequestDeviceWithBlock):
        * WebGPU/Buffer.mm:
        (wgpuBufferMapAsyncWithBlock):
        * WebGPU/CommandEncoder.mm:
        (wgpuCommandEncoderSetLabel):
        * WebGPU/ComputePipeline.mm:
        (wgpuComputePipelineSetLabel):
        * WebGPU/Device.mm:
        (wgpuDeviceCreateComputePipelineAsyncWithBlock):
        (wgpuDeviceCreateRenderPipelineAsyncWithBlock):
        (wgpuDevicePopErrorScopeWithBlock):
        (wgpuDeviceSetDeviceLostCallbackWithBlock):
        (wgpuDeviceSetUncapturedErrorCallbackWithBlock):
        * WebGPU/Instance.mm:
        (wgpuInstanceRequestAdapterWithBlock):
        * WebGPU/Queue.mm:
        (wgpuQueueOnSubmittedWorkDoneWithBlock):
        (wgpuQueueSetLabel):
        * WebGPU/RenderPipeline.mm:
        (wgpuRenderPipelineSetLabel):
        * WebGPU/ShaderModule.mm:
        (wgpuShaderModuleGetCompilationInfoWithBlock):
        (wgpuShaderModuleSetLabel):
        * WebGPU/Surface.mm:
        (wgpuSurfaceGetPreferredFormat):